[gd_scene load_steps=53 format=1]

[ext_resource path="res://level/level3/level3.gd" type="Script" id=1]
[ext_resource path="res://assets/levels/level3/bg_on_game.png" type="Texture" id=2]
[ext_resource path="res://level/level3/spawner_darat.gd" type="Script" id=3]
[ext_resource path="res://level/level3/spawner_udara.gd" type="Script" id=4]
[ext_resource path="res://level/level3/tanaman.tscn" type="PackedScene" id=5]
[ext_resource path="res://level/level3/siraman.tscn" type="PackedScene" id=6]
[ext_resource path="res://level/level3/palu.tscn" type="PackedScene" id=7]
[ext_resource path="res://level/level3/jaring.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/papercuts-2.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/levels/animasi_waktu.png" type="Texture" id=10]
[ext_resource path="res://assets/levels/level3/plant_indicator_01.png" type="Texture" id=11]
[ext_resource path="res://assets/levels/level3/plant_over_01.png" type="Texture" id=12]
[ext_resource path="res://assets/levels/level3/plant_progress_01.png" type="Texture" id=13]
[ext_resource path="res://assets/icons/menu/menu.png" type="Texture" id=14]
[ext_resource path="res://assets/icons/menu/menu-clicked.png" type="Texture" id=15]
[ext_resource path="res://assets/icons/menu/menu-hover.png" type="Texture" id=16]
[ext_resource path="res://assets/levels/g4505.png" type="Texture" id=17]
[ext_resource path="res://assets/levels/pesan.png" type="Texture" id=18]
[ext_resource path="res://assets/icons/settings/settings-tutup.png" type="Texture" id=19]
[ext_resource path="res://assets/icons/settings/settings-tutup-clicked.png" type="Texture" id=20]
[ext_resource path="res://assets/icons/settings/settings-tutup-hover.png" type="Texture" id=21]
[ext_resource path="res://assets/levels/level3/musuh/uret/uret.png" type="Texture" id=22]
[ext_resource path="res://assets/levels/level3/jaring.png" type="Texture" id=23]
[ext_resource path="res://assets/levels/level3/musuh/siput/01.png" type="Texture" id=24]
[ext_resource path="res://assets/levels/level3/palu_sprites.png" type="Texture" id=25]
[ext_resource path="res://assets/levels/level3/musuh/kumbang/kumbang.png" type="Texture" id=26]
[ext_resource path="res://level/level3/sprite_animasi.tres" type="SpriteFrames" id=27]
[ext_resource path="res://assets/levels/level3/siraman.png" type="Texture" id=28]
[ext_resource path="res://assets/tutorial/3.png" type="Texture" id=29]
[ext_resource path="res://assets/icons/sets/g81.png" type="Texture" id=30]
[ext_resource path="res://assets/icons/sets/g85.png" type="Texture" id=31]
[ext_resource path="res://assets/icons/sets/g67.png" type="Texture" id=32]
[ext_resource path="res://assets/icons/sets/g76.png" type="Texture" id=33]
[ext_resource path="res://assets/icons/exit/exit1.png" type="Texture" id=34]
[ext_resource path="res://assets/icons/exit/exit-clicked1.png" type="Texture" id=35]
[ext_resource path="res://assets/icons/exit/exit-hover1.png" type="Texture" id=36]

[sub_resource type="DynamicFont" id=1]

font/size = 41
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 9 )

[sub_resource type="GDScript" id=2]

resource/name = "menuButton"
script/source = "#Built-in script
extends TextureButton

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_menu_button_pressed():
#	levels_singletons.game_paused = true
#	utils.get_main_node().get_node(\"pesan\").set_hidden(false)
	utils.get_main_node().get_node(\"tutorial\").set_hidden(false)
	get_tree().set_pause(true)
	
"

[sub_resource type="DynamicFont" id=3]

font/size = 56
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]

font/size = 72
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]

font/size = 32
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 9 )

[sub_resource type="GDScript" id=6]

resource/name = "tutupButton_pesan"
script/source = "#Built-in script

extends TextureButton

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_tutupButton_pressed():
	if utils.get_main_node().gameover:
		utils.get_main_node().game_over()
	else:
		if levels_singletons.game_paused:
			pass
		else:
			utils.get_main_node().get_node(\"Timer\").start()
		levels_singletons.game_paused = false
	get_tree().set_pause(false)
	get_parent().set_hidden(true)
"

[sub_resource type="Animation" id=7]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( -290, 0, -170, 0, -170, 820, -290, 920 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 1580, 920, -290, 920, -170, 820, 1480, 820 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( 1580, -10, 1580, 920, 1480, 820, 1480, -10 )

[sub_resource type="GDScript" id=11]

resource/name = "batas_area"
script/source = "#Built-in scripts
extends Area2D

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_batas_body_enter( body ):
	body.queue_free()
"

[sub_resource type="GDScript" id=12]

resource/name = "tutupButton_pesan"
script/source = "#Built-in script

extends TextureButton

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_tutupButton_pressed():
	if get_node(\"../sfxButton\").is_pressed():
		levels_singletons.set_sfx(true)
	else:
		levels_singletons.set_sfx(false)
	if get_node(\"../musikButton\").is_pressed():
		levels_singletons.set_bgm(true)
	else:
		levels_singletons.set_bgm(false)
	levels_singletons.do_save(utils.get_main_node())
	get_tree().set_pause(false)
	get_parent().set_hidden(true)
"

[sub_resource type="DynamicFont" id=13]

font/size = 32
font/use_mipmaps = true
font/use_filter = false
font/font = ExtResource( 9 )

[sub_resource type="DynamicFont" id=14]

font/size = 32
font/use_mipmaps = true
font/use_filter = false
font/font = ExtResource( 9 )

[sub_resource type="GDScript" id=15]

resource/name = "backToMenuButton"
script/source = "#Built-in script
extends TextureButton
func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_backToMenuButton_pressed():
	get_tree().change_scene(\"res://mainmenu/mainmenu.tscn\")
	get_tree().set_pause(false)
"

[sub_resource type="DynamicFont" id=16]

font/size = 24
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 9 )

[node name="level3" type="Node"]

script/script = ExtResource( 1 )

[node name="bg" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="background" type="TextureFrame" parent="bg"]

rect/min_size = Vector2( 1280, 720 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="musuh darat" type="Position2D" parent="."]

transform/pos = Vector2( 1390, 520 )
script/script = ExtResource( 3 )
timeDelay = 10.0

[node name="musuh udara" type="Position2D" parent="."]

transform/pos = Vector2( 610, 10 )
script/script = ExtResource( 4 )
timeDelay = 6

[node name="game" type="Node2D" parent="."]

[node name="tanaman" parent="game" instance=ExtResource( 5 )]

transform/pos = Vector2( 620, 300 )
transform/scale = Vector2( 0.5, 0.5 )
end_time = 30.0

[node name="tanaman1" parent="game" instance=ExtResource( 5 )]

transform/pos = Vector2( 870, 360 )
transform/scale = Vector2( 0.5, 0.5 )
start_time = 5.0
end_time = 30.0

[node name="tanaman2" parent="game" instance=ExtResource( 5 )]

transform/pos = Vector2( 370, 360 )
transform/scale = Vector2( 0.5, 0.5 )
start_time = 10.0
end_time = 30.0

[node name="tanaman3" parent="game" instance=ExtResource( 5 )]

transform/pos = Vector2( 110, 480 )
transform/scale = Vector2( 0.5, 0.5 )
start_time = 4.0
end_time = 30.0

[node name="tanaman4" parent="game" instance=ExtResource( 5 )]

transform/pos = Vector2( 1090, 470 )
transform/scale = Vector2( 0.5, 0.5 )
start_time = 7.0
end_time = 30.0

[node name="siraman" parent="game" instance=ExtResource( 6 )]

transform/pos = Vector2( 770, 630 )

[node name="palu" parent="game" instance=ExtResource( 7 )]

editor/display_folded = true
transform/pos = Vector2( 422, 612 )

[node name="jaring" parent="game" instance=ExtResource( 8 )]

editor/display_folded = true
transform/pos = Vector2( 602, 612 )

[node name="HUD" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="time_label" type="Label" parent="HUD"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 60.0
margin/right = 157.0
margin/bottom = 122.0
custom_fonts/font = SubResource( 1 )
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="HUD/time_label"]

visibility/behind_parent = true
transform/pos = Vector2( 31, 26 )
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
hframes = 4

[node name="survival_progress" type="TextureProgress" parent="HUD"]

visibility/visible = false
rect/rotation = -90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 242.0
margin/top = 107.0
margin/right = 268.0
margin/bottom = 319.0
range/min = 0.0
range/max = 60.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = true
texture/under = ExtResource( 11 )
texture/over = ExtResource( 12 )
texture/progress = ExtResource( 13 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="menu_button" type="TextureButton" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1090.0
margin/top = 30.0
margin/right = 1237.0
margin/bottom = 84.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )
textures/hover = ExtResource( 16 )
params/resize_mode = 0
params/stretch_mode = 0
script/script = SubResource( 2 )

[node name="tanaman_counts" type="Label" parent="HUD"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 167.0
margin/right = 186.0
margin/bottom = 250.0
custom_fonts/font = SubResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureFrame" type="TextureFrame" parent="HUD/tanaman_counts"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -170.0
margin/top = -13.0
margin/right = 63.0
margin/bottom = 82.0
texture = ExtResource( 17 )
stretch_mode = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 60.0
one_shot = true
autostart = false

[node name="pesan" type="Container" parent="."]

process/pause_mode = 2
editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="TextureFrame" type="TextureFrame" parent="pesan"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
texture = ExtResource( 18 )
stretch_mode = 0

[node name="Label" type="Label" parent="pesan"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 420.0
margin/top = 60.0
margin/right = 843.0
margin/bottom = 167.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.661789, 0.903628, 0.925781, 1 )
custom_colors/font_color_shadow = Color( 0.00732422, 0.0701098, 0.078125, 1 )
custom_constants/shadow_offset_y = 9
text = "Survival Time!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RichTextLabel" type="Label" parent="pesan"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 340.0
margin/top = 200.0
margin/right = 940.0
margin/bottom = 350.0
custom_fonts/font = SubResource( 5 )
text = "Jaga tanaman tebumu dalam waktu 5 menit! Jangan biarkan mereka memakannya!"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tutupButton" type="TextureButton" parent="pesan"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 440.0
margin/right = 757.0
margin/bottom = 567.4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 19 )
textures/pressed = ExtResource( 20 )
textures/hover = ExtResource( 21 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0
script/script = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="pesan"]

editor/display_folded = true
transform/pos = Vector2( 770, 390 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 22 )

[node name="Sprite" type="Sprite" parent="pesan/Sprite2"]

transform/pos = Vector2( 60, -40 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 23 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="pesan/Sprite2/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "New Anim"

[node name="Sprite3" type="Sprite" parent="pesan"]

editor/display_folded = true
transform/pos = Vector2( 620, 390 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 24 )

[node name="Sprite" type="Sprite" parent="pesan/Sprite3"]

transform/pos = Vector2( 60, -80 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 25 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="pesan/Sprite3/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "New Anim"

[node name="Sprite4" type="Sprite" parent="pesan"]

editor/display_folded = true
transform/pos = Vector2( 470, 390 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 26 )

[node name="Sprite" type="Sprite" parent="pesan/Sprite4"]

transform/pos = Vector2( 80, -80 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 25 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="pesan/Sprite4/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "New Anim"

[node name="Sprite5" type="AnimatedSprite" parent="pesan"]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 850, 330 )
transform/scale = Vector2( 0.3, 0.3 )
frames = ExtResource( 27 )
animation = "tanaman"
frame = 1

[node name="Sprite" type="Sprite" parent="pesan/Sprite5"]

transform/pos = Vector2( 200, 33.3333 )
texture = ExtResource( 28 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="pesan/Sprite5/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "New Anim"

[node name="batas" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 9 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 10 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="batas"]

build_mode = 0
polygon = Vector2Array( -170, 0, -170, 820, 1480, 820, 1480, -10, 1580, -10, 1580, 920, -290, 920, -290, 0 )
shape_range = Vector2( 0, 2 )
trigger = false

[node name="tutorial" type="Container" parent="."]

process/pause_mode = 2
editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="TextureFrame" type="TextureFrame" parent="tutorial"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
texture = ExtResource( 29 )
stretch_mode = 0

[node name="tutupButton" type="TextureButton" parent="tutorial"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 550.0
margin/top = 610.0
margin/right = 734.0
margin/bottom = 701.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 19 )
textures/pressed = ExtResource( 20 )
textures/hover = ExtResource( 21 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0
script/script = SubResource( 12 )

[node name="musikButton" type="CheckButton" parent="tutorial"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1050.0
margin/top = 390.0
margin/right = 1260.0
margin/bottom = 446.0
custom_icons/off = ExtResource( 30 )
custom_icons/on = ExtResource( 31 )
custom_fonts/font = SubResource( 13 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "MUSIC"
flat = false
align = 0

[node name="sfxButton" type="CheckButton" parent="tutorial"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1060.0
margin/top = 500.0
margin/right = 1260.0
margin/bottom = 556.0
custom_icons/off = ExtResource( 32 )
custom_icons/on = ExtResource( 33 )
custom_fonts/font = SubResource( 14 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "SFX"
flat = false
align = 0

[node name="backToMenuButton" type="TextureButton" parent="tutorial"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1160.0
margin/top = 587.0
margin/right = 1275.2
margin/bottom = 702.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 34 )
textures/pressed = ExtResource( 35 )
textures/hover = ExtResource( 36 )
params/resize_mode = 0
params/scale = Vector2( 0.04, 0.04 )
params/stretch_mode = 0
script/script = SubResource( 15 )

[node name="Label" type="Label" parent="tutorial/backToMenuButton"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -108.0
margin/top = 23.0
margin/right = 13.0
margin/bottom = 105.0
custom_fonts/font = SubResource( 16 )
text = "Kembali ke Menu Utama"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="HUD/menu_button" to="HUD/menu_button" method="_on_menu_button_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="pesan/tutupButton" to="pesan/tutupButton" method="_on_tutupButton_pressed"]

[connection signal="body_enter" from="batas" to="batas" method="_on_batas_body_enter"]

[connection signal="pressed" from="tutorial/tutupButton" to="tutorial/tutupButton" method="_on_tutupButton_pressed"]

[connection signal="pressed" from="tutorial/backToMenuButton" to="tutorial/backToMenuButton" method="_on_backToMenuButton_pressed"]


